--- a/Swing15 Combo Boxes/bin/.gitignore
+++ b/Swing15 Combo Boxes/bin/.gitignore
@@ -1,22 +1,3 @@
-/AgeCategory.class
-/App$1.class
-/App.class
-/FormEvent.class
-/FormListener.class
-/FormPanel$1.class
-/FormPanel$2.class
-/FormPanel.class
-/MainFrame$1.class
-/MainFrame$2.class
-/MainFrame.class
-/StringListener.class
-/TextPanel.class
-/Toolbar$1.class
-/Toolbar$2.class
-/Toolbar.class
-/MainFrame$3.class
-/MainFrame$4.class
-/MainFrame$5.class
-/MainFrame$6.class
-/PersonFileFilter.class
-/Utils.class
+/controller
+/gui
+/model
